tests/baselines/reference/ts-ignore.errors.txt
ts-ignore.ts(13,5): error TS2322: Type 'string' is not assignable to type 'number'.


==== ts-ignore.ts (1 errors) ====
    // @ts-ignore with additional commenting
    var invalidCommentedFancy: number = 'nope';
    
    // @ts-ignore with additional commenting
    var validCommentedFancy: string = 'nope';
    
    // @ts-ignore
    var invalidCommentedPlain: number = 'nope';
    
    // @ts-ignore
    var validCommentedPlain: string = 'nope';
    
    var invalidPlain: number = 'nope';
        ~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    var validPlain: string = 'nope';
    
    // @ts-ignore: with additional commenting
    var invalidCommentedFancy: number = 'nope';
    
    // @ts-ignore: with additional commenting
    var validCommentedFancy: string = 'nope';
    